# drpangloss

./: .gitignore  .pre-commit-config.yaml  404.html  CONTRIBUTING.md  README.md  REVIEW_NOTES.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  setup.py  sitemap.xml
.github/workflows/: documentation.yml  tests.yml
api/: index.html
api/grid_fit/: index.html
api/inference/: index.html
api/models/: index.html
api/models/classes/binary_model_angular/: index.html
api/models/classes/binary_model_cartesian/: index.html
api/models/classes/oidata/: index.html
api/models/functions/: index.html
api/models/legacy_migration/: index.html
api/oifits_implaneia/: index.html
api/plotting/: index.html
api/savefits/: index.html
binary_search/: index.html
contrast_limits/: index.html
data/: NuHor_F480M.oifits  alfPic_PIONIER.fits
data_io/: index.html
docs/: api.md  binary_recovery_grid_hmc.md  binary_search.md  contrast_limits.md  contrast_limits_ruffio.md  data_io.md  index.md  model_syntax.md  review_2026-03-03.md  synthetic_data_file_roundtrip.md
docs/api/: grid_fit.md  index.md  inference.md  oifits_implaneia.md  plotting.md  savefits.md
docs/api/models/: functions.md  index.md  legacy_migration.md
docs/api/models/classes/: binary_model_angular.md  binary_model_cartesian.md  oidata.md
docs/javascripts/: mathjax.js
examples/: synthetic_binary_workflow.py
model_syntax/: index.html
notebooks/: ami_exploration.ipynb  binary_recovery_grid_hmc.ipynb  binary_search.ipynb  contrast_limits.ipynb  contrast_limits_ruffio.ipynb  data_io.ipynb  louis_visibilities.ipynb  model_syntax.ipynb  oidata_sandbox.ipynb  pionier.ipynb  synthetic_data_file_roundtrip.ipynb  tutorial_helpers.py  upper_limits_new.ipynb  upper_limits_ruffio.ipynb  zodiax_sandbox.ipynb
scripts/: lint_local.sh  sync_tutorial_docs.py
search/: search_index.json
src/: __init__.py  oifits_implaneia.py
src/drpangloss/: __init__.py  grid_fit.py  inference.py  models.py  models_old.py  oifits_implaneia.py  plotting.py  savefits.py
src/drpangloss.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: _test_data.py  test_docs_synthetic_recovery.py  test_grid_and_limits.py  test_inference_geometry.py  test_models_core.py  test_models_old_deprecation.py  test_regressions.py  test_tutorial_docs_sync.py  tests.py
