[project]
name = "drpangloss"
version = "0.0.1"
description = "Python package to fit interferometric data, accelerated using Jax."
readme = "README.md"
requires-python =">=3.11"
license = {file = "LICENSE.md"}
authors = [
  {name = "Benjamin Pope", email = "b.pope@uq.edu.au"},
  {name = "Dori Blakely", email="blakelyd@uvic.ca"}
]
keywords = ["python", "optics", "machine-learning", "jax", "autodiff", "differentiable", "diffraction", "simulation", "telescope", "drpangloss"]
urls = {repository = "https://github.com/benjaminpope/drpangloss"}
dependencies = ["jax", "jaxlib", "numpy","matplotlib","astropy"]
classifiers=[
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

# [project.optional-dependencies]
# extras = []
# dev = ["pytest", "black", "ruff", "pre-commit", "mkdocs", "mkdocs-jupyter", "mkdocs-same-dir", "mkdocs-autorefs", "mkdocs-simple-plugin", "mkdocstrings-python", "jupyter_contrib_nbextensions", "notebook==6.4.12"]

[tool.black]
line-length = 79

[tool.ruff]
line-length = 79
select = ["E", "F"]
ignore = ["E402", "E721", "E731", "E741", "F722"]
ignore-init-module-imports = true

[tool.ruff.isort]
combine-as-imports = true
lines-after-imports = 2